--- a/APICatalogo/appsettings.json
+++ b/APICatalogo/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=CatalogoDB;Uid=root"
+    "DefaultConnection": "Server=localhost;Database=CatalogoDB;User=root;Password=12242526"
   },
   "Logging": {
     "LogLevel": {
