--- a/APICatalogo/appsettings.json
+++ b/APICatalogo/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "chave1": "Valor1",
+  "chave2": "Valor2",
+  "secao1": {
+    "chave1": "Valor da chave 1 na seção 1",
+    "chave2": "Valor da chave 2 na secção 1"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=CatalogoDB;User=root;Password=12242526"
   },
